      related to this, discontinued the 'basedir.txt' functionality
    - Added 'baseinappdir' commandline argument, which sets the base
      directory to the application folder (Windows only for now); this
      replaces the functionality of 'basedir.txt'

  * Enhanced 'Command' menu to display current state and more commands.

  * Added option to save and load all TimeMachine states at once.

  * Added option to change pitch of Pitfall II music.

  * ROM Info Launcher can now display multiple lines per property and
    bank switching type.

  * In file listings, you can now select directories by holding 'Shift' on
    the first character entered.  Entering characters in lowercase still
    selects files, as before.

  * Fixed bug when starting ROMs via MacOS finder.

  * Added various developer options for oddball TIAs:
    - stuffed player, missiles and ball move
    - delayed playfield bits and color
    - delayed players and ball VDEL swap

  * Disabled some developer options for 'Player settings'.

  * Writes to RAM read ports are ignored now.

  * Added Developer setting, which breaks on writes to read ports.

  * Improved breakpoints to now consider the banks.

  * Improved debugger's TIA display and zoom windows.

  * Improved hotkeys, now many emulation keys work in debugger too.

  * Fixed display of negative values in debugger; sometimes they were
    shown as positive.

  * Reworked ROM properties database, making it load faster in certain
    cases.  Related to this, completely removed 'Display_Height' stuff.
    (TODO: Stella.pro cleanup, doc).

  * Updated internal ROM properties database to ROM-Hunter version 16
    (thanks go to RomHunter for his tireless research in this area).
    Related to this, updated the snapshot collection.

  * Fixed 'Dancing Plate (Unknown) (PAL)' to use joystick.

  * Fixed cheatcode handling in 2K and 4K ROMs.

  * Fixed bug where frying one ROM was continued with the next ROM.

  * Fixed not working 7800 pause key.
